Rettet feil #deploy-test-pdl-forvalter #deploy-pdl-forvalter